@@ -22,6 +22,7 @@ command = method
 
 [SourceGitHub]
 [Bugs]
+header = SUPPORT
 
 [Authors]
 
