@@ -2,6 +2,8 @@ Revision history for {{ $dist->name }}:
 
 {{$NEXT}}
   [Documentation]
+  - Merged BUGS and SUPPORT FOR OLDER PERL VERSIONS into a SUPPORT section.
+
   - Fixed a minor typo.
 
 v0.2.3    2024-12-18 16:15:14+00:00 Europe/London
